Remove deprecated call to Integer constructor